--- a/package.json
+++ b/package.json
@@ -2,16 +2,37 @@
   "name": "placementsuchiit",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/kurru-shadrak/placement",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "flowbite": "^2.0.0",
+    "flowbite-react": "^0.6.4",
+    "gh-pages": "^6.1.1",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.13.0",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-star-rating": "^1.4.2",
+    "react-star-ratings": "^2.3.0",
+    "react-timer-hook": "^3.0.7",
+    "video-react": "^0.16.0",
+    "vite": "^4.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "deploy":"gh-pages -d build ",
+    "predeploy":"npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
   }
 }
